--- a/mongodb/src/main/resources/application.properties
+++ b/mongodb/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=mongodb
-spring.profiles.active=atlas
+# spring.profiles.active=atlas
 
 spring.data.mongodb.host=localhost
 spring.data.mongodb.port=27017
